--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tailwindui/react": "^0.1.1",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.0.0",
