--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,7 +1,4 @@
 {
-  "src/**/*.{js,jsx,ts,tsx,json,css}": [
-    "prettier --write",
-    "eslint --fix src/",
-    "tslint --fix --project ."
-  ]
+  "src/**/*.+(js|json|ts|tsx)": ["eslint"],
+  "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": ["prettier --write"]
 }
