--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
     "@tailwindui/react": "^0.1.1",
     "next": "12.0.7",
     "react": "17.0.2",
