--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.4.2",
     "@tailwindui/react": "^0.1.1",
     "@types/react-headroom": "^2.2.2",
+    "hamburger-react": "^2.4.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-awesome-reveal": "^3.8.1",
